# cpp_practise

Paula/ProjectIntro/: preparation.md
Paula/practise01/: CMakeLists.txt  FirstHist.ipynb  main.cpp
Paula/practise01/.cache/clangd/index/: PiGenerator.cpp.3DA1C70DB799902D.idx  PiGenerator.hpp.559FF53562DC5367.idx  main.cpp.CCC7885B998513B3.idx
Paula/practise01/src/: CMakeLists.txt  PiGenerator.cpp  PiGenerator.hpp
Simon/: first_month_plan.md  preparation.md
shared/: linux.md  preparation.md
